--- a/WatchApp/Info.plist
+++ b/WatchApp/Info.plist
@@ -19,14 +19,14 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>14</string>
+	<string>16</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>com.tsybulin.letsshopping</string>
+	<string>com.ptsybulin.letsshopping</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
