--- a/letsshopping/letsshopping.entitlements
+++ b/letsshopping/letsshopping.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.tsybulin.letsshopping</string>
+		<string>group.com.ptsybulin.letsshopping</string>
 	</array>
 </dict>
 </plist>
